# docker-image-builder

./: .gitignore  README.md  build_all.sh  clear_images.sh  docker-compose.yaml  environment.yaml  pyproject.toml  requirements.txt  setup.cfg  test_dev-server.sh  test_proxy.sh
Image-Builder/: README.md  build.py  example.yml  image-builder  schema.yaml  test_build.yml
base-cpu/: Dockerfile.base  Dockerfile.bionic.base  Dockerfile.focal.base
base-gpu/: Dockerfile.base  Dockerfile.bionic.cuda10-1  Dockerfile.bionic.cuda10-1.devel  Dockerfile.bionic.cuda10-1.devel.cudnn7  Dockerfile.bionic.cuda10-1.devel.cudnn8  Dockerfile.bionic.cuda10-1.runtime  Dockerfile.bionic.cuda10-1.runtime.cudnn7  Dockerfile.bionic.cuda10-1.runtime.cudnn8  Dockerfile.bionic.cuda10-2  Dockerfile.bionic.cuda10-2.devel  Dockerfile.bionic.cuda10-2.devel.cudnn7  Dockerfile.bionic.cuda10-2.devel.cudnn8  Dockerfile.bionic.cuda10-2.runtime  Dockerfile.bionic.cuda10-2.runtime.cudnn7  Dockerfile.bionic.cuda10-2.runtime.cudnn8  Dockerfile.focal.cuda11-0  Dockerfile.focal.cuda11-0-3  Dockerfile.focal.cuda11-0-3.devel  Dockerfile.focal.cuda11-0-3.devel.cudnn8  Dockerfile.focal.cuda11-0-3.runtime  Dockerfile.focal.cuda11-0-3.runtime.cudnn8  Dockerfile.focal.cuda11-0.devel  Dockerfile.focal.cuda11-0.devel.cudnn8  Dockerfile.focal.cuda11-0.runtime  Dockerfile.focal.cuda11-0.runtime.cudnn8  Dockerfile.focal.cuda11-1  Dockerfile.focal.cuda11-1-1  Dockerfile.focal.cuda11-1-1.devel  Dockerfile.focal.cuda11-1-1.devel.cudnn8  Dockerfile.focal.cuda11-1-1.runtime  Dockerfile.focal.cuda11-1-1.runtime.cudnn8  Dockerfile.focal.cuda11-1.devel  Dockerfile.focal.cuda11-1.devel.cudnn8  Dockerfile.focal.cuda11-1.runtime  Dockerfile.focal.cuda11-1.runtime.cudnn8  Dockerfile.focal.cuda11-2-1  Dockerfile.focal.cuda11-2-1.devel  Dockerfile.focal.cuda11-2-1.devel.cudnn8  Dockerfile.focal.cuda11-2-1.runtime  Dockerfile.focal.cuda11-2-1.runtime.cudnn8  (+10 more)
caddy-proxy/: Dockerfile.base  Dockerfile.caddy  build.sh  run_proxy.sh
core-gpu/: Dockerfile.base  Dockerfile.core  Dockerfile.dev  Dockerfile.dev.conda  build.sh
dev-server/: Dockerfile.dev  Dockerfile.dev.magento  Dockerfile.k8s.vscode  Dockerfile.vscode  build-custom-focal-cuda110-cudnn8.yml  build-focal-cuda110-cudnn8.yml  build-nvidia-focal-cuda111-cudnn8.yml  build.sh  build.yml  docker-compose.yaml  run_dev-server.sh
docs/: NOTES.md  README.md
flashlight/: Dockerfile.focal.cpu  Dockerfile.focal.cuda  build-focal-cpu.yml  build-focal-cuda.yml
magento-demo/: build.sh  build.yml  setup-php7.2.sh  setup.sh
magento-dev/: Dockerfile.base
openpose/: Dockerfile.bionic.dev  Dockerfile.focal  Dockerfile.focal.base  Dockerfile.focal.dev  build-bionic-dev.yml  build-bionic.yml  build-focal-dev.yml  build-focal.yml  installOpencv.sh
stag-server/: Dockerfile.app  Dockerfile.k8s.app  build.sh  run_stag-server.sh
(+54 files in other folders)
