[build-system]
requires = [
    "setuptools >= 48",
    "setuptools_scm[toml] >= 4, <6",
    "setuptools_scm_git_archive",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
write_to = "src/image_builder/_version.py"                                                                                                                                                                                                                                                                                                                                                                                                                  
relative_to = "__file__" 

fallback_version = "0.0.1"
