[metadata]
name = docker-image-builder
version = attr: image_builder.__version__
description = Build docker images dynamical through YAML configurations.
long_description = file: docs/README.md, docs/CHANGELOG.md, docs/LICENSE
url = https://github.com/circlenaut/docker-image-builder
author = "Phillip Strefling",
author_email = "phillip@strefling.pro",
license = GPLv3+
keywords = docker, image, container, builder
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving

project_urls = 
    Documentation = https://github.com/circlenaut/docker-image-builder
    Source = https://github.com/circlenaut/docker-image-builder
    Tracker = https://github.com/circlenaut/docker-image-builder/issues

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
platforms = any
python_requires = >=3.7, <4
setup_requires =
    setuptools_scm
install_requires =
    coloredlogs>=15.0
    ruyaml>=0.20.0
    bcrypt>=3.2.0
    yamale>=3.0.4
    passlib>=1.7.4
    PyYAML>=5.4.1
    rich>=10.0.0

[options.packages.find]
where = src
include =
    image_builder
    image_builder.*

[options.package_data]
* = schema.yaml

[options.entry_points]
console_scripts =
    docker-image-builder = image_builder.core:main

[bdist_wheel]
universal = 1

[flake8]
author-attribute = forbidden
no-accept-encodings = True
assertive-snakecase = True
inline-quotes = "
multiline-quotes = """
docstring-quotes = """
application-import-names = docker-image-builder
hang_closing = false
doctests = false
max-complexity = 10
exclude =
    .git
    __pycache__
    build
    dist